# openmock

./: .gitignore  .gitlab-ci.yml  .markdownlintrc  .pre-commit-config.yaml  .pylintrc  .pylintrc_docs  .pylintrc_spell  .pylintrc_tests  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  Justfile  Makefile  Makefile2  Pipfile  README.md  mkdocs.yml  private_dictionary.txt  pyproject.toml  pyproject.toml.org  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml  build.yml  publish_to_pypi.yml  tox.yaml  tox.yml
docs/: api-reference.md  contributing.md  index.md  requirements.txt  unit-testing.md  web-ui.md
docs/openmock/: fake_asyncopensearch.html  fake_cluster.html  fake_indices.html  fake_opensearch.html  index.html  normalize_hosts.html
docs/openmock/behaviour/: index.html  server_failure.html
docs/openmock/utilities/: decorator.html  index.html
hide/: Makefile  _requirements.txt  _requirements_test.txt  setup.cfg  setup.py
openmock/: __init__.py  __main__.py  cli.py  fake_asyncindices.py  fake_asyncopensearch.py  fake_cluster.py  fake_indices.py  fake_opensearch.py  fake_server.py  gui.py  normalize_hosts.py  rest_bridge.py  web.py
openmock/behaviour/: __init__.py  server_failure.py
openmock/utilities/: __init__.py  decorator.py
scripts/: opensearch_docker.py  rest_bridge.py
spec/: ALIAS.md  GEMINI_SAYS.md  GEMINI_SEZ.md
tests/: __init__.py  backend.py  conftest.py  test_aggregations.py  test_cli.py  test_fake_server.py  test_fake_server_extra.py  test_normalize_hosts.py  tox_banner.py
tests/fake_asyncindices/: test_async_indices.py  test_create.py  test_delete.py  test_exists.py  test_refresh.py
tests/fake_asyncopensearch/: test_bulk.py  test_count.py  test_create.py  test_delete.py  test_exists.py  test_get.py  test_index.py  test_info.py  test_instance.py  test_ping.py  test_scroll.py  test_search.py  test_suggest.py  test_update.py
tests/fake_cluster/: test_health.py
tests/fake_indices/: test_alias_advanced.py  test_aliases.py  test_create.py  test_delete.py  test_exists.py  test_invalid_name.py  test_mappings.py  test_misc.py  test_refresh.py  test_settings.py
tests/fake_opensearch/: test_alias_resolution.py  test_bugs.py  test_bulk.py  test_count.py  test_create.py  test_create_pit.py  test_delete.py  test_exists.py  test_get.py  test_index.py  test_info.py  test_instance.py  test_ping.py  test_scroll.py  test_search.py  test_suggest.py  test_update.py
tests/fake_opensearch/behaviour/: __init__.py  test_server_failure.py
tests/gui/: test_gui.py
tests/test_from_opensearch_py/: test_opensearch_py_compat.py
tests/test_new_suites/: __init__.py  test_all.py  test_fail_fast.py
tests/web/: test_web.py
