[project]
name = "openmock"
version = "3.1.5"
description = "Python OpenSearch Mock for test purposes"
authors = [
    {name = "Marcos Cardoso"},
    {name = "Mathew Martin", email = "matthewdeanmartin@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["opensearch", "mocking", "testing"]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "opensearch-py",
    "python-dateutil>=2.8.2",
    "aiohttp",
    "python-ranges==0.2.1",
]

[project.urls]
"Bug Tracker" = "https://github.com/matthewdeanmartin/openmock/issues"
"Change Log" = "https://github.com/matthewdeanmartin/openmock/blob/main/CHANGELOG.md"


[dependency-groups]
dev = ["parameterized>=0.9.0",
    "pytest>=7.4.3", "mypy>=1.6.1", "requests>=2.31.0", "types-python-dateutil",
    "tox>=4.11.3", "coverage>=7.3.2", "pytest-cov>=4.1.0", "pylint>=3.0.2",
    "metametameta", "interrogate>=1.5.0", "pydoctest>=0.1.22", "pdoc3>=0.10.0",
    "mdformat>=0.7.17", "linkcheckmd>=1.4.0", "codespell>=2.2.6", "pyenchant>=3.2.2", "aiounittest>=1.5.0",
    "black>=25.11.0","bandit>=1.9.2","pre-commit","hatchling"

]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "openmock/**/*.py",
    "openmock/py.typed",
    "/README.md", "LICENSE",
]

exclude = []

[tool.hatch.build.targets.wheel]
packages = ["openmock"]
include = [
    "openmock/**/*.py",
    "openmock/py.typed",
    "/README.md", "LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

