[project]
name = "openmock"
version = "3.2.0"
description = "Python OpenSearch Mock for test purposes"
authors = [
    { name = "Marcos Cardoso" },
    { name = "Mathew Martin", email = "matthewdeanmartin@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["opensearch", "mocking", "testing"]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "opensearch-py",
    "python-dateutil>=2.8.2",
    "aiohttp",
    "python-ranges==0.2.1",
]

[project.optional-dependencies]
web = [
    "streamlit",
    "fastapi",
    "uvicorn"
]
rest = [
    "fastapi",
    "uvicorn"
]
all = [
    "openmock[web,rest]"
]

[project.scripts]
openmock = "openmock.cli:main"
openmock-serve = "openmock.rest_bridge:main"

[project.urls]
"Bug Tracker" = "https://github.com/matthewdeanmartin/openmock/issues"
"Change Log" = "https://github.com/matthewdeanmartin/openmock/blob/main/CHANGELOG.md"
"Documentation" = "https://openmock.readthedocs.io/en/latest/"

[dependency-groups]
dev = [
    "gha-update; python_version >= '3.12'",
    # pytest
    "pytest_asyncio",
    "aiounittest>=1.5.0",
    "parameterized>=0.9.0",
    "pytest>=7.4.3",
    "coverage>=7.3.2", "pytest-cov>=4.1.0",
    # types
    "mypy>=1.6.1",
    "types-python-dateutil",
    # web
    "requests>=2.31.0",
    # cross compat
    "tox>=4.11.3",
    # code quality
    "pylint>=3.0.2",
    "pre-commit",
    "metametameta",
    # docs checking
    "interrogate>=1.5.0",
    "pydoctest>=0.1.22",
    "mdformat>=0.7.17", "linkcheckmd>=1.4.0", "codespell>=2.2.6", "pyenchant>=3.2.2", "pdoc3>=0.10.0",
    "black>=25.11.0",
    # security
    "bandit>=1.9.2",
    # publishing
    "hatchling",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "openmock/**/*.py",
    "openmock/py.typed",
    "/README.md", "LICENSE",
]

exclude = []

[tool.hatch.build.targets.wheel]
packages = ["openmock"]
include = [
    "openmock/**/*.py",
    "openmock/py.typed",
    "/README.md", "LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pytest.ini_options]
markers = [
    "parity: tests intended to run against a live OpenSearch backend for parity checks",
    "mock_backend: tests intended for the in-memory mock backend only",
]

